// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateProxy rejects proxy address when the address is invalid 1`] = `
<FormattedMessage
  defaultMessage="Address must use host:port format. Example: 127.0.0.1:9400, localhost:9400. Hosts can only consist of letters, numbers, and dashes."
  id="xpack.remoteClusters.remoteClusterForm.proxyError.invalidCharactersMessage"
  values={Object {}}
/>
`;

exports[`validateProxy rejects proxy address when the port is invalid 1`] = `
<FormattedMessage
  defaultMessage="A port is required."
  id="xpack.remoteClusters.remoteClusterForm.addressError.invalidPortMessage"
  values={Object {}}
/>
`;

exports[`validateProxy rejects proxy address when there's no input 1`] = `
<FormattedMessage
  defaultMessage="A proxy address is required."
  id="xpack.remoteClusters.remoteClusterForm.proxyError.missingProxyMessage"
  values={Object {}}
/>
`;
